fix font on mobile version

--- a/main.css
+++ b/main.css
@@ -16,28 +16,24 @@ body {
 .navlink {
     color: white ;
 }
-#navbarUp{
-    width: 100%;
-}
 #basic {
     text-align: center;
     color: white;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Permanent Marker', sans-serif;
     margin-top: 1%;
-    margin-right: 8%;
+    margin-right: 10%;
 }
 #infoBox {
-    margin: 0% 20% 0% 20%;
-    font-family: 'Permanent Marker', cursive;
+    margin: 0% 18% 0% 18%;
 }
 #infoBox > p {
     font-size: large;
     display: block;
     color: white;
     text-align: center;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Permanent Marker', sans-serif;
 }
-/* div#carouselExampleIndicators.carousel.slide {
+div#carouselExampleIndicators.carousel.slide {
     margin-left: 17%;
 }
 .carousel-indicators {
@@ -48,60 +44,64 @@ body {
 }
 .carousel-control-next {
     margin-right: 16.5%;
-} */
+}
 .carousel-indicators {
-    margin-left: 18%;
+    margin-right: 29%;
 }
 footer#about{
+    margin-top: 50%;
     width: 100%;
     background-color: #282828;
     color: white;
+    font-family: 'Permanent Marker', sans-serif;
     font-size: small;
     text-align: center;
-    margin-top: auto;
-    font-family: 'Permanent Marker', cursive;
 }
 footer#work {
+    margin-top: 48%;
     background-color: #282828;
     color: white;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Permanent Marker', sans-serif;
     font-size: small;
     text-align: center;
-    width:100%;
-    bottom: 0px;
 }
 footer#home{
     width: 100%;
     background-color: #282828;
     color: white;
+    font-family: 'Permanent Marker', sans-serif;
     font-size: small;
     text-align: center;
-    font-family: 'Permanent Marker', cursive;
 }
 div#footer {
-    background-color: #857878;
+    background-color: #282828;
 }
 #footerList {
     list-style-type: none;
 }
 div.infoAbout {
-    margin-top: 3%;
+    margin-top: 1.5%;
     margin-bottom: 1.5%;
-    margin-left: 2%;
     background-color: #190061;
+    width: 43.75rem;
+    height: 19.75rem;
 }
 #expirence {
+   float: left;
    margin-left: 2%;
 }
 #other {
-    margin-top: 2%;
+    float: left;
+    margin-left: 2%;
 }
 #learn {
+    float: right;
     margin-right: 2%;
 }
 #softwares {
     align-items: center;
-    /* margin-right: 2%; */
+    float: right;
+    margin-right: 2%;
 }
 #softwareHead {
     color: white;
@@ -111,39 +111,43 @@ div.infoAbout {
 .bg-body-custom {
     background-color: #282828;
     color: white;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Permanent Marker', sans-serif;
 }
 .cardCool {
-    margin-top: 5%;
-    border-radius: 2%;
-    height: 110%;
-    width: 88%;
-    background-color: black;
+    background-color: #190061;
+    width: 29.188rem;
+    height: 20.5rem;
 }
 #cardOne {
+    float: left;
     margin-left: 1.75%;
     margin-top: 1%;
 }
 #cardTwo {
+    float: left;
     margin-right: .75%;
     margin-left: .75%;
     margin-top: 1%;
 }
 #cardThree {
+    float: right;
     margin-right: 2.25%;
     margin-top: 1%;
 }
 #cardFour {
+    float: left;
     margin-left: 1.75%;
     margin-top: 1%;
 }
 #cardFive {
+    float: left;
     margin-right: .75%;
     margin-left: .75%;
     margin-top: 1%;
 }
 
 #cardSix {
+    float: right;
     margin-right: 2.25%;
     margin-top: 1%;
 }
@@ -161,7 +165,7 @@ div.infoAbout {
 .card-body, .card {
     background-color: #282828;
     color: white;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Permanent Marker', sans-serifgit;
     font-size: small;
 }
 #profile {
@@ -169,14 +173,6 @@ div.infoAbout {
     width: 10%;
     height: 10%;
     float: left;
-    margin-top: 1%;
+    margin-top: 2%;
+    margin-left: 2%;
 }
-.navbar-toggler-icon, .navbar-toggler {
-    background-color: white;
-}
-video {
-    min-width: 20%;
-    max-width: 100%;
-  }
-
-
